updated scrollbar and font-size of landing page. Need only to fix navbar

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -23,14 +23,11 @@ html,body
     margin: 0;
     border: 0;
     padding: 0;
-    background-color: #f4f6f6;
     color: #1c2938;
     padding-top: 180px;
     padding-bottom: 100px;
     top: 0;
     left: 0;
-
-
     background: url("/images/provitaStudent4.PNG") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -118,16 +115,6 @@ html,body
   width: 60%;
 }
 
-/*.productsDescription {*/
-    /*!*height: 1200px;*!*/
-    /*margin: 0;*/
-    /*border: 0;*/
-    /*padding: 0;*/
-    /*background-color: #cd3f3e;*/
-    /*width: 100%;*/
-    /*color: #1c2938;*/
-/*}*/
-
 #aboutUsHeart {
     margin-bottom: 30px;
 }
@@ -172,7 +159,7 @@ html,body
 /* total width */
 body::-webkit-scrollbar {
     background-color:#1c2938;
-    width:16px
+    width:10px
 }
 
 /* background of the scrollbar except button or resizer */
